Fixed monitoring page alignment

--- a/titan/static/scripts/app/components/monitoring/grid.css
+++ b/titan/static/scripts/app/components/monitoring/grid.css
@@ -42,6 +42,11 @@
     vertical-align: text-bottom;
 }
 
+.monitoring-executions {
+    display: flex;
+    flex-direction: row;
+}
+
 .monitoring-title-highlight {
     position: relative;
 }
